# mai-lab-tree

./: CMakeLists.txt  README.md  main.c
cli/: cli.c  cli.h
stack/: stack.c  stack.h
tree/: tree.c  tree.h  tree_utils.c  tree_utils.h
utils/: utils.c  utils.h
